# cpp-foundations

./: CMakeLists.txt  index.html
.github/workflows/: ci.yml
coverage/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage/src/: MathUtils.cpp.func-c.html  MathUtils.cpp.func.html  MathUtils.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/: Doxyfile  mainpage.dox
docs/topics/: Course.dox  Lesson0.dox  Lesson01_Intro.dox  Lesson02_FunctionsNamespaces.dox  Lesson03_HeadersCompilation.dox  Lesson04_MemoryConstStatic.dox  (+1 more)
doxygen/: Course_8dox.html  Lesson01__Intro_8dox.html  Lesson0_8dox.html  MathUtils_8cpp.html  MathUtils_8cpp__incl.map  MathUtils_8cpp__incl.md5  MathUtils_8h.html  MathUtils_8h__dep__incl.map  MathUtils_8h__dep__incl.md5  MathUtils_8h_source.html  README_8md.html  dir_000002_000001.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49f20e2055220d733d0e6c4c5c2faa90.html  dir_49f20e2055220d733d0e6c4c5c2faa90_dep.map  dir_49f20e2055220d733d0e6c4c5c2faa90_dep.md5  dir_50592e5dba99dc975e4ce280b055020f.html  dir_50592e5dba99dc975e4ce280b055020f_dep.map  dir_50592e5dba99dc975e4ce280b055020f_dep.md5  dir_5121a184563ff5e3a18d2ebf7760c7b4.html  dir_5121a184563ff5e3a18d2ebf7760c7b4_dep.map  dir_5121a184563ff5e3a18d2ebf7760c7b4_dep.md5  dir_df997ef5cbe81af8266600b381d65502.html  dir_df997ef5cbe81af8266600b381d65502_dep.map  dir_df997ef5cbe81af8266600b381d65502_dep.md5  files.html  graph_legend.html  group__cpp__course.html  group__cpp__course.map  group__cpp__course.md5  group__cpp__lesson__00.html  group__cpp__lesson__00.map  group__cpp__lesson__00.md5  group__cpp__lesson__01.html  group__cpp__lesson__01.map  group__cpp__lesson__01.md5  index.html  mainpage_8dox.html  md_README.html  menudata.js  (+6 more)
unit_tests/: index.html
(+46 files in other folders)
